# synth-xfer

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONSTANT_RANGE_PLAYBOOK.md  README.md  TRANSFER_PLAYBOOK.md  plot.py  pyproject.toml  run_stuff.sh
.github/workflows/: ci.yml
agent/: README.md  agent_helper.py  agent_instructions.md  agent_sdk.py  agent_solution_set.py  args.py  compress.py  compress_prompt.md  direct_llm.py  learn.py  library_learning.py  library_prompt.md  main.py  ops.md  prompt.md  prompts.py  shared.py  synth.py  template.mlir  util.py
agent/examples/: kb_or.mlir  kb_top.mlir  kb_xor.mlir
agent/md/: agent_instructions.md  autodoc_instructions.md  compress_instructions.md  compress_prompt.md  library_instructions.md  library_prompt.md  meet_instructions.md  ops.md  prompt_deprecated.md  spec.md
agent/stitch/: converter.py  main.py  match.py  matcher.py  search.py  util.py
agent/template/: template.mlir
cmake/templates/: binding_domain_base.cpp.in  binding_domain_shard.cpp.in  binding_domain_stub.cpp.in
cpp/: anti_range.hpp  bindings.cpp  const_range.hpp  domain.hpp  enum.hpp  eval.hpp  knownbits.hpp  mod.hpp  pdep.hpp  rand.hpp  results.hpp  sconst_range.hpp  uconst_range.hpp
cpp/bindings/: bindings.cpp  bindings_common.hpp  bindings_helpers.cpp
cpp/core/: apint.hpp  apint_inst.cpp  domain.hpp  eval.hpp  results.hpp  to_string.hpp
cpp/domains/: knownbits.hpp  mod.hpp  sconst_range.hpp  uconst_range.hpp
cpp/llvm/: APInt.h  ConstantRange.h  KnownBits.h  pattern.h
input_data/KnownBits/: Add.tsv  AddNsw.tsv  AddNswNuw.tsv  AddNuw.tsv  Ashr.tsv  AshrExact.tsv  CountLZero.tsv  CountLZeroUndef.tsv  CountRZero.tsv  CountRZeroUndef.tsv  Fshl.tsv  Fshr.tsv  Lshr.tsv  LshrExact.tsv  Mods.tsv  Modu.tsv  Mul.tsv  MulNsw.tsv  MulNswNuw.tsv  MulNuw.tsv  PopCount.tsv  SaddSat.tsv  Sdiv.tsv  SdivExact.tsv  Shl.tsv  ShlNsw.tsv  ShlNswNuw.tsv  ShlNuw.tsv  Smax.tsv  Smin.tsv  SsubSat.tsv  Sub.tsv  SubNsw.tsv  SubNswNuw.tsv  SubNuw.tsv  UaddSat.tsv  Udiv.tsv  UdivExact.tsv  Umax.tsv  Umin.tsv  (+2 more)
input_data/SConstRange/: AddNswNuw.tsv  AddNuw.tsv  And.tsv  Ashr.tsv  CountLZero.tsv  CountLZeroUndef.tsv  CountRZero.tsv  CountRZeroUndef.tsv  Lshr.tsv  Mods.tsv  Modu.tsv  MulNsw.tsv  MulNswNuw.tsv  MulNuw.tsv  Or.tsv  PopCount.tsv  Sdiv.tsv  Shl.tsv  ShlNsw.tsv  ShlNswNuw.tsv  ShlNuw.tsv  Smax.tsv  Smin.tsv  SmulSat.tsv  SsubSat.tsv  SubNsw.tsv  SubNswNuw.tsv  SubNuw.tsv  Umax.tsv  Umin.tsv  UmulSat.tsv  UsubSat.tsv  Xor.tsv
input_data/UConstRange/: AddNsw.tsv  AddNswNuw.tsv  AddNuw.tsv  And.tsv  Ashr.tsv  CountLZero.tsv  CountLZeroUndef.tsv  CountRZero.tsv  CountRZeroUndef.tsv  Lshr.tsv  Mods.tsv  Modu.tsv  MulNsw.tsv  MulNswNuw.tsv  MulNuw.tsv  Or.tsv  PopCount.tsv  Sdiv.tsv  Shl.tsv  ShlNsw.tsv  ShlNswNuw.tsv  ShlNuw.tsv  Smax.tsv  Smin.tsv  SmulSat.tsv  SsubSat.tsv  SubNsw.tsv  SubNswNuw.tsv  SubNuw.tsv  Udiv.tsv  Umax.tsv  Umin.tsv  UmulSat.tsv  UsubSat.tsv  Xor.tsv
mlir/CommonPatterns/: 100_16755.mlir  101_16632.mlir  102_16604.mlir  103_16436.mlir  106_15259.mlir  107_15225.mlir  10_68804.mlir  110_14974.mlir  111_14950.mlir  113_14871.mlir  115_14506.mlir  121_14192.mlir  127_13389.mlir  128_13247.mlir  12_67972.mlir  130_13028.mlir  131_12972.mlir  133_12968.mlir  134_12806.mlir  135_12628.mlir  138_12318.mlir  140_12047.mlir  141_11925.mlir  142_11924.mlir  144_11716.mlir  146_11647.mlir  147_11640.mlir  148_11445.mlir  153_11055.mlir  154_10939.mlir  155_10853.mlir  157_10751.mlir  158_10745.mlir  159_10726.mlir  160_10720.mlir  162_10691.mlir  164_10542.mlir  165_10473.mlir  168_10347.mlir  171_10248.mlir  (+224 more)
mlir/ConstRange/: meet.mlir  top.mlir
mlir/ConstantPatterns/: 101_18113.mlir  102_18064.mlir  103_17860.mlir  104_17497.mlir  105_17410.mlir  106_17215.mlir  107_16847.mlir  108_16680.mlir  109_16338.mlir  10_244717.mlir  110_15897.mlir  111_15682.mlir  112_15642.mlir  113_15300.mlir  114_15242.mlir  115_15076.mlir  116_14874.mlir  117_14800.mlir  118_14754.mlir  119_14453.mlir  11_227013.mlir  120_14452.mlir  121_14449.mlir  122_14334.mlir  123_14332.mlir  124_14323.mlir  125_14323.mlir  126_14296.mlir  127_14195.mlir  128_14115.mlir  129_14114.mlir  12_223862.mlir  130_14114.mlir  131_13855.mlir  132_13827.mlir  133_13812.mlir  134_13793.mlir  135_13768.mlir  136_13763.mlir  137_13757.mlir  (+450 more)
mlir/ConstantSinglePatterns/: 17_136356.mlir  20_80990.mlir  23_66820.mlir  26_57280.mlir  30_22221.mlir  32_18255.mlir  36_4334.mlir  40_2103.mlir  42_1618.mlir  43_1346.mlir  44_203.mlir  45_169.mlir  46_76.mlir  4_1002118.mlir  8_334679.mlir
mlir/KnownBits/: get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
mlir/Mod11/: get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
mlir/Mod13/: get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
mlir/Mod3/: get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
mlir/Mod5/: get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
mlir/Mod7/: get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
mlir/Operations/: Abds.mlir  Abdu.mlir  Add.mlir  AddNsw.mlir  AddNswNuw.mlir  AddNuw.mlir  And.mlir  Ashr.mlir  AshrExact.mlir  AvgCeilS.mlir  AvgCeilU.mlir  AvgFloorS.mlir  AvgFloorU.mlir  CountLOne.mlir  CountLOneUndef.mlir  CountLZero.mlir  CountLZeroUndef.mlir  CountROne.mlir  CountROneUndef.mlir  CountRZero.mlir  CountRZeroUndef.mlir  Lerp.mlir  Lshr.mlir  LshrExact.mlir  Mods.mlir  Modu.mlir  Mul.mlir  MulNsw.mlir  MulNswNuw.mlir  MulNuw.mlir  Nop.mlir  Or.mlir  OrDisjoint.mlir  PopCount.mlir  SaddSat.mlir  Sdiv.mlir  SdivExact.mlir  Shl.mlir  ShlNsw.mlir  ShlNswNuw.mlir  (+20 more)
mlir/Patterns/: 001.mlir  002.mlir  003.mlir  004.mlir  005.mlir  006.mlir  007.mlir  008.mlir  009.mlir  (+491 more)
stitch/: compress.py  lam_to_mlir.py  llmain.py  main.py  mlir_to_lam.py  prompt.md
synth_xfer/: _eval_engine.pyi  jit.py  lower_to_llvm.py
tests/: test_jit.py  test_kb_eval.py  test_lattice.py  test_lowering.py  test_max_precise.py  test_mod.py  test_parse.py  test_point_eval.py  test_verif.py
(+321 files in other folders)
