[build-system]
requires = [
  "scikit-build-core>=0.11",
  "pybind11>=3.0",
  "setuptools_scm[toml]>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "synth-xfer"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "bitwuzla==0.9.0",
  "cloudpickle>=3.1.2",
  "cvc5==1.3.3",
  "egglog>=1.0.0",
  "llvmlite==0.44.0",
  "pandas>=2.3.3",
  "PyYAML>=6.0.3",
  "setproctitle==1.3.7",
  "xdsl>=0.48.3",
  "xdsl-smt @ https://github.com/dominicmkennedy/xdsl-smt/archive/9196b62.tar.gz",
  "z3-solver==4.15.1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.5",
  "pyright>=1.1",
  "pytest>=9",
  "ruff>=0.15",
]

[project.scripts]
sxf = "synth_xfer.cli.sxf:main"
run-xfer = "synth_xfer.cli.run_xfer:main"
eval-xfer = "synth_xfer.cli.eval_xfer:main"
verify = "synth_xfer.cli.verify:main"
lower-to-llvm = "synth_xfer.cli.lower_to_llvm:main"
simplifier = "synth_xfer.cli.simplifier:main"
enum = "synth_xfer.cli.enum:main"
max-precise = "synth_xfer.cli.max_precise:main"
pattern = "synth_xfer.cli.pattern:main"

[tool.scikit-build]
minimum-version = "0.11"
build-dir = "build/"
wheel.expand-macos-universal-tags = true
wheel.packages = ["synth_xfer"]

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = true
CMAKE_C_COMPILER = "clang"
CMAKE_CXX_COMPILER = "clang++"
SYNTH_XFER_DOMAINS = [
  "knownbits",
  "uconst_range",
  "sconst_range",
  "mod3",
  # "mod5",
  # "mod7",
  # "mod11",
  # "mod13",
]
SYNTH_XFER_ARITIES = ["1", "2", "3", "4", "5"]
SYNTH_XFER_WIDTHS = [
  "4", "8", "16", "32", "64",
  # "1", "2", "3", "4", "5", "6", "7", "8", "9",
  # "10", "11", "12", "13", "14", "15", "16", "17", "18", "19",
  # "20", "21", "22", "23", "24", "25", "26", "27", "28", "29",
  # "30", "31", "32", "33", "34", "35", "36", "37", "38", "39",
  # "40", "41", "42", "43", "44", "45", "46", "47", "48", "49",
  # "50", "51", "52", "53", "54", "55", "56", "57", "58", "59",
  # "60", "61", "62", "63", "64"
]

[tool.ruff]
line-length = 90
target-version = "py313"
lint.extend-select = ["I"]
lint.ignore = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["synth_xfer"]
combine-as-imports = true
force-sort-within-sections = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["synth_xfer", "tests"]
reportMissingImports = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
